# ClawMind

./: .gitignore  LICENSE  READCE.md  README.md  TaskManual.md  UserManual.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/adapters/: filesystem_adapter.py  llm_adapter.py  logseq_adapter.py
app/application/: audit_service.py  classifier_service.py  context_builder.py  recovery_service.py  runner_service.py  writeback_service.py
app/domain/: __init__.py  contracts.py  enums.py  models.py
app/executors/: __init__.py  codex_runner.py  deterministic_executor.py
app/policies/: __init__.py  context_options.py
app/repositories/: __init__.py  artifact_repository.py  run_log_repository.py
tests/: __init__.py  test_artifact_repository.py  test_classifier_service.py  test_codex_cli_adapter.py  test_codex_runner.py  test_config.py  test_context_builder.py  test_deterministic_executor.py  test_domain_models.py  test_gemini_api_adapter.py  test_logseq_adapter.py  test_main.py  test_recovery_service.py  test_runner_service.py
