[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawmind"
version = "0.1.2"
description = "Task-state-machine-first runner for Logseq-driven workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flashtext>=2.7",
  "tzdata>=2025.2",
]

[project.scripts]
clawmind = "app.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app*"]
